# personal-rag-system

./: .dockerignore  .env.advanced.example  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: api.md  architecture.md  configuration.md  extending.md  operations.md  security.md  validation.md
docs/handoffs/: 2026-07-17-codex-personal-rag-phase-2.handoff.mdc  2026-07-17-codex-personal-rag-phase-2.precompact.handoff.mdc  2026-07-17-codex-personal-rag-system.handoff.mdc  2026-07-17-codex-personal-rag-system.precompact.handoff.mdc  2026-07-18-codex-personal-library-findability-phase-2.handoff.mdc  2026-07-18-codex-personal-library-findability-phase-2.precompact.handoff.mdc
docs/personal-rag/: 2026-07-17-product-experience-phase-2.md  2026-07-17-production-rag-implementation.md  2026-07-18-library-findability-phase-2.md
docs/releases/: 2026-07-18-open-source-adoption-readiness.md
docs/superpowers/plans/: 2026-07-17-personal-rag-product-experience-phase-2.md  2026-07-17-personal-rag-system.md  2026-07-18-personal-library-findability-phase-2.md
scripts/: __init__.py  backup.py  check_public_repo.py  demo.py  restore.py  setup.py
src/personal_rag/: __init__.py  config.py  container.py  database.py  document_types.py  errors.py  job_service.py  models.py  observability.py  parsers.py  providers.py  rag_service.py  repository.py  security.py  storage.py  vector_store.py  worker.py
src/personal_rag/api/: app.py  dependencies.py
src/personal_rag/api/routes/: chat.py  conversations.py  documents.py  health.py  jobs.py  status.py
src/personal_rag/ui/: app.py  client.py  presentation.py
tests/: __init__.py  fakes.py
tests/api/: test_api.py
tests/browser/: __init__.py  fake_api.py  test_fake_api.py
tests/eval/: golden_questions.json
tests/fixtures/: knowledge_base.md
tests/integration/: test_rag_service.py  test_worker.py
tests/live/: test_providers.py
tests/ui/: conftest.py  test_app.py  test_client.py
tests/unit/: test_backup_restore.py  test_config.py  test_container.py  test_demo.py  test_deployment_config.py  test_document_types.py  test_observability.py  test_parsers.py  test_public_repo.py  test_repository.py  test_setup.py  test_storage.py
